[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/gameplay/playagain.gd" type="Script" id=1]
[ext_resource path="res://art/gameplay/lose BG.png" type="Texture" id=2]
[ext_resource path="res://art/gameplay/lose rain.png" type="Texture" id=3]
[ext_resource path="res://art/Silkscreen-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://music/losebgm.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 1280, 880 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 880, 1280, 880 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 1760, 1280, 880 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1280, 880 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 880, 1280, 880 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 1760, 1280, 880 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 150, 100 )
scale = Vector2( 0.234375, 0.227273 )
frames = SubResource( 4 )
speed_scale = 0.1

[node name="score2" type="Label" parent="."]
margin_left = 5.0
margin_top = 15.0
margin_right = 45.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 6.0
margin_top = 33.0
margin_right = 46.0
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "______"

[node name="Button" type="Button" parent="."]
margin_left = 107.0
margin_top = 66.0
margin_right = 184.0
margin_bottom = 86.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "Play Again"
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 82.0
margin_top = 150.0
margin_right = 216.0
margin_bottom = 170.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "Back to Main Menu"
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 83.0
margin_top = 106.0
margin_right = 219.0
margin_bottom = 126.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "Continue -500 points"
flat = true

[node name="highscore2" type="Label" parent="."]
margin_left = 3.0
margin_top = 83.0
margin_right = 67.0
margin_bottom = 97.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "Highscore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore" type="Label" parent="."]
margin_left = 6.0
margin_top = 106.0
margin_right = 46.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
text = "_____"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.443137 )
position = Vector2( 150, 100 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 8 )
speed_scale = 3.0
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
